[project]
name = "scp-jp-utils"
version = "1.0.1"
authors = [{ name = "ukwhatn", email = "ukwhatn@gmail.com" }]
description = "Package Template"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx >= 0.28",
    "fastapi >= 0.115.0"
]

[project.optional-dependencies]
build = [
    "build",
    "twine",
]
lint = [
    "flake8",
    "mypy",
    "isort",
]
format = [
    "black",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/ukwhatn/audit-logger-api-client"
"Bug Tracker" = "https://github.com/ukwhatn/audit-logger-api-client/issues"